# audioanalyser

./: .gitignore  Dockerfile  LICENSE-MIT  Makefile  README.md  TEMPLATE.md  azure-speech-to-text.py  azure-text-analysis.py  azure_speech_to_text.py  azure_text_analysis.py  diagram.py  env.example  index.html  pyproject.toml  recommendations_status.txt  requirements.txt  server.py  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
Transcripts/: a_business_interview.txt  a_call_from_a_customer.txt  a_design_presentation.txt  a_digital_detox_podcast.txt  a_lecture_about_an_experiment.txt  a_talk_about_motivation.txt
audioanalyser/: __init__.py  __main__.py
audioanalyser/modules/: analyze_text_files.py  audio_analyser_server.bak  audio_analyser_server.py  audio_recorder.py  azure_recommendation.py  azure_speech_to_text.py  azure_text_analysis.py  azure_translator.py  server.py  speech_text_server.py  text_to_speech.py  transcribe_audio_files.py
dashboard/: index.html
dashboard/assets/css/: style.css  style.css.map
dashboard/assets/js/: dashboard.js
dashboard/assets/scss/: _variables.scss
dashboard/pages/charts/: chartjs.html
dashboard/pages/forms/: basic_elements.html
dashboard/pages/icons/: mdi.html
dashboard/pages/samples/: blank-page.html  error-404.html  error-500.html  login.html  register.html
dashboard/pages/tools/: index.html
dashboard/pages/ui-features/: buttons.html  typography.html
dashboard/partials/: _footer.html  _navbar.html  _sidebar.html
resources/recommendations/: azure_recommendation-01_call_from_a_customer.txt  azure_recommendation-02_call_airport_cab.txt  azure_recommendation-03_making_a_decision.txt
resources/reports/: 01_call_from_a_customer_analysis.json  01_call_from_a_customer_analysis.txt  02_call_airport_cab_analysis.json  02_call_airport_cab_analysis.txt  03_making_a_decision_analysis.json  03_making_a_decision_analysis.txt  text_analysis.db
resources/transcripts/: 01_call_from_a_customer.json  01_call_from_a_customer.txt  02_call_airport_cab.json  02_call_airport_cab.txt  03_making_a_decision.json  03_making_a_decision.txt  transcriptions.db
src/: server.py
tests/: test_main.py
