[tool.poetry]
name = "audioanalyser"
version = "0.0.2"
description = "Streamline call recording and audio file transcription, uncover actionable insights in seconds with advanced text analysis, powered by Microsoft Azure AI services."
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
license = "Apache Software License"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/audioanalyser"
homepage = "https://audioanalyser.pro"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.9.1"
azure-ai-textanalytics = "5.3.0"
azure-cognitiveservices-speech = "1.34.0"
azure-core = "1.29.6"
cherrypy = "18.9.0"
python-dotenv = "1.0.0"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 72
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = "audioanalyser"
known_third_party = "xmlschema"

[tool.pytest]
addopts = "--cov=audioanalyser --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=100"
testpaths = "tests"
