# Copyright (C) 2023 Sebastien Rousseau.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.
#
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = audioanalyser
version = 0.0.1

[options]
install_requires =
    aiohttp==3.9.1
    azure-ai-textanalytics==5.3.0,
    azure-cognitiveservices-speech==1.34.0,
    azure-core==1.29.6,
    cherrypy==18.9.0,
    python-dotenv==1.0.0,
    requests==2.31.0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[wheel]
universal = 1