# Copyright (C) 2023-2024 Sebastien Rousseau.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.
#
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = audioanalyser
version = 0.0.6

[options]
install_requires =
    aiohttp==3.9.1
    aiosignal==1.3.1
    annotated-types==0.6.0
    anyio==4.2.0
    async-timeout==4.0.3
    asyncio==3.4.3
    attrs==23.2.0
    autocommand==2.2.2
    azure-ai-textanalytics==5.3.0
    azure-cognitiveservices-speech==1.34.0
    azure-common==1.1.28
    azure-core==1.29.6
    certifi==2023.11.17
    charset-normalizer==3.3.2
    cheroot==10.0.0
    cherrypy==18.9.0
    colorama==0.4.6
    datetime==5.4
    exceptiongroup==1.2.0
    frozenlist==1.4.1
    idna==3.6
    inflect==7.0.0
    isodate==0.6.1
    jaraco-collections==5.0.0
    jaraco-context==4.3.0
    jaraco-functools==4.0.0
    jaraco-text==3.12.0
    more-itertools==10.2.0
    multidict==6.0.4
    openai==0.27.4
    portend==3.2.0
    pyaudio==0.2.14
    pydantic-core==2.14.6
    pydantic==2.5.3
    python-dotenv==1.0.0
    pytz==2023.3.post1
    requests==2.31.0
    setuptools==69.0.3
    six==1.16.0
    sniffio==1.3.0
    tempora==5.5.0
    tqdm==4.66.1
    typing-extensions==4.9.0
    urllib3==2.1.0
    yarl==1.9.4
    zc-lockfile==3.0.post1
    zope-interface==6.1

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[wheel]
universal = 1